Default Home controller in place, and we are using CloudFront for the PROD CDN

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US" >
 <head>
-  <title>Ssa</title>
+  <title>Asterisk Security Toolset - SAMM Self Assessment</title>
+  <meta http-equiv="Content-Type" content='text/html; charset=utf-8' />
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'fav.png', :rel => 'icon'%>
 </head>
 <body>
 
