--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,13 @@
 	<div class="ast-universalbar">
 		<div class="ast-ub-title">Asterisk Security Toolset</div>
 		<div class="ast-ub-subtitle">SAMM Self Assessment</div>
-		<ul class="ast-ub-options">
-			<li><a href="#">About</a></li>
-			<li><a href="#">AST</a></li>
-			<li><a href="#">Labs</a></li>
-		</ul>
+		<div id="ast-ub-options">
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">AST</a></li>
+				<li><a href="#">Labs</a></li>
+			</ul>
+		</div>
 	</div>
 
 	<script>
