Shifted CDN to HTTPS and slight changes to CSS incl GFonts

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -22,13 +22,22 @@ body {
 	position: relative;
 	padding: 0;
 }
-.ast-universalbar {
-	background: #222;
+.limiter {
+	margin: 0 auto;
+	width: 960px;
+	position: relative;
+	text-align: left;
+}
+#ast-universalbar {
+	background: #000;
 	margin: 0 auto;
 	padding: 0;
 	height: 30px;
+	width: 100%;
+	text-align: center;
+	min-width: 960px;
 }
-.ast-ub-title {
+#ast-ub-title {
 	position: absolute;
 	top: 8px;
 	left: 10px;
@@ -37,7 +46,7 @@ body {
 	font-weight: bold;
 	color: #cc0000;
 }
-.ast-ub-subtitle {
+#ast-ub-subtitle {
 	position: absolute;
 	top: 8px;
 	left: 200px;
@@ -72,4 +81,11 @@ body {
 #ast-ub-options a:hover {
 	text-decoration: none;
 	border-bottom: 1px solid #cc0000;
+}
+.star {
+}
+h1.ast-title {
+	font-family: 'Lato', sans-serif;
+	font-style: italic;
+	text-align: left;
 }
