--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<div id="wrapper">
-	<div class="ast-universalbar">
-		<div class="ast-ub-title">Asterisk Security Toolset</div>
-		<div class="ast-ub-subtitle">SAMM Self Assessment</div>
+<div id="ast-universalbar">
+	<div class="limiter">
+		<div id="ast-ub-title"><span class="star">*</span> Asterisk Security Toolset</div>
+		<div id="ast-ub-subtitle">SAMM Self Assessment</div>
 		<div id="ast-ub-options">
 			<ul>
 				<li><a href="#">About</a></li>
@@ -10,18 +10,19 @@
 			</ul>
 		</div>
 	</div>
+</div>
 
-	<script>
-		$(function() {
-			$("#tabs").tabs();
-			JTable.Setup();
-		});
-	</script>
+<script>
+	$(function() {
+		$("#tabs").tabs();
+		JTable.Setup();
+	});
+</script>
 
-	<div class="ast-main-content">
+<div class="ast-main-content">
+	<div class="limiter">
 		<h1 class="ast-title">Samm Self Assessment</h1>
-	<p class="ast-text"><%=t 'ast-text'%></p>
-
+		<p class="ast-text"><%=t 'ast-text'%></p>
 		<div class="ssa-tab-container">
 			<div id="tabs">
 				<ul>
@@ -200,9 +201,10 @@
 					</table></p>
 				</div>
 			</div>
-	</div>
-
-	<div class="ast-footer">
-
-	</div>	
+		</div>
+	</div>		
 </div>
+
+<div class="ast-footer">
+
+</div>	
