Minor changes to UI/css/en.yml

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -88,4 +88,17 @@ h1.ast-title {
 	font-family: 'Lato', sans-serif;
 	font-style: italic;
 	text-align: left;
+	font-size: 34px;
+	line-height: 60px;
+}
+p.ast-text {
+	font-family: 'Arial', sans-serif;
+	font-size: 12px;
+	font-style: italic;
+}
+p.ast-text a, p.ast-text a:visited {
+	color: black;
+}
+p.ast-text a:hover, p.ast-text a:visited:hover {
+	color: #cc0000;
 }
