--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 <div class="ast-main-content">
 	<div class="limiter">
 		<h1 class="ast-title">Samm Self Assessment</h1>
-		<p class="ast-text"><%=t 'ast-text'%></p>
+		<p class="ast-text"><%=t 'ast-text'%> <a href="http://www.opensamm.org" target="_blank"><%=t 'ast-text-clickhere'%></a></p>
 		<div class="ssa-tab-container">
 			<div id="tabs">
 				<ul>
